--- a/Diffusion-Limited Aggregation 01/.project
+++ b/Diffusion-Limited Aggregation 01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Diffusion-Limited Aggregation 01</name>
+	<name>Stigmergy2D 01</name>
 	<comment></comment>
 	<projects>
 	</projects>
