--- a/Stigmergy3D 01/.classpath
+++ b/Stigmergy3D 01/.classpath
@@ -39,16 +39,16 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/user/simutils/simutils.jar">
 		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Users/srou.UNIMELB/Documents/Processing/libraries/simutils/docs/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Stigmergy3D 01/lib/user/simutils"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/user/toxiclibscore/toxiclibscore.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://toxiclibs.org/docs/core/"/>
+			<attribute name="javadoc_location" value="file:/C:/Users/srou.UNIMELB/Documents/Processing/libraries/toxiclibscore/docs/"/>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Stigmergy3D 01/lib/user/toxiclibscore"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/user/kd/kd.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
